--- a/report/report.bib
+++ b/report/report.bib
@@ -21,3 +21,23 @@
     journal = {Fuzzy Sets and Systems},
     doi = {10.1016/0165-0114(82)90056-2}
 }
+
+@article{topological-entropy,
+    author = {Cánovas, Jose and Kupka, Jiri},
+    year = {2014},
+    month = {12},
+    pages = {132–145},
+    title = {On the topological entropy on the space of fuzzy numbers},
+    volume = {257},
+    journal = {Fuzzy Sets and Systems},
+    doi = {10.1016/j.fss.2013.05.013}
+}
+
+@article{diffusion-equation,
+    author = {Jefferson Leite, Moiseis Cecconello and Jackellyne Leite, R. C. Bassanezi},
+    year = {2015},
+    pages = {132–145},
+    title = {On Fuzzy Solutions for Diffusion Equation},
+    journal = {Journal of Applied Mathematics},
+    doi = {10.1155/2015/874931}
+}
