--- a/report/report.tex
+++ b/report/report.tex
@@ -72,8 +72,17 @@
 \newpage
 \setcounter{page}{1}
 
-\section{Giới thiệu về biến đổi Fourier nhanh}
+\section{Giới thiệu}
 \subfile{sections/introduction.tex}
+
+\section{Khái niệm cơ bản}
+\subfile{sections/basic.tex}
+
+\section{Thuật toán}
+\subfile{sections/algorithm.tex}
+
+\section{Cài đặt thử nghiệm}
+\subfile{sections/implementation.tex}
 
 \bibliography{report}{}
 \bibliographystyle{plain}
