--- a/report/report.tex
+++ b/report/report.tex
@@ -25,7 +25,7 @@
 % Link color setup
 \hypersetup{
 	colorlinks = true,
-	linkcolor = black,
+	linkcolor = blue,
 	citecolor = blue
 }
 
@@ -72,6 +72,25 @@
 \newpage
 \setcounter{page}{1}
 
+{\small \textbf{Tóm tắt} - \textit{
+Nguyên lý mở rộng của Zadeh là một trong những 
+kỹ thuật cổ điển nhất trong lý thuyết tập mờ. Nó là một công cụ 
+dùng để mở rộng một cách tự nhiên những hàm liên tục giá trị 
+thực thành những hàm mờ (những hàm mà tham số đầu vào là tập mờ). 
+Về mặt lý thuyết thì đây là một công cứ toán học rất mạnh mẽ và
+được sử dụng rất nhiều trong lý thuyết. Tuy nhiên, việc tính toán 
+chính xác hay thậm chí tính toán xấp xỉ đều thường rất khó 
+khăn trong thực tế. Do đó, đã có rất nhiều cách tiếp cận 
+đã được đề xuất để tính toán nguyên lý mở rộng. 
+Trong bài báo cáo này, ta sẽ xem xét đến một thuật toán 
+mới mẻ cho việc tính toán nguyên lý mở rộng Zadeh 
+trên các hàm piecewise linear liên lục. Một trong những 
+ưu điểm của phương pháp này là có thể áp dụng cho các hàm 
+hoặc tập mờ mà không liên tục từ đầu vào hoặc trong quá trình tính toán 
+sử dụng nguyên lý mở rộng. 
+}
+}
+
 \section{Giới thiệu}
 \subfile{sections/introduction.tex}
 
@@ -83,6 +102,9 @@
 
 \section{Cài đặt thử nghiệm}
 \subfile{sections/implementation.tex}
+
+\section{Kết luận}
+\subfile{sections/conclusion.tex}
 
 \bibliography{report}{}
 \bibliographystyle{plain}
