--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -27,11 +27,12 @@ học $(X, f)$, ta có thể suy ra hệ động học mờ $(\mathbb{F}(X), z_f
 có thể nghiên cứu các tính chất của các hệ động lực mờ từ những tính chất đã được 
 nghiên cứu hàng thập kỷ cho các hệ động học cổ điển. Đã có nhiều bài báo khoa học
 nghiên cứu về topic này như \cite{topological-entropy}, \cite{diffusion-equation},
-\cite{Kloeden} TODO.
+\cite{Kloeden} \cite{Kupka}.
 
 Tuy nhiên, vấn đề thường xuyên xảy ra khi mà cần tính toán phương trình \eqref{eq:1}
 các bài toán ứng dụng. Nhìn chung các bài toán liên quan đến nguyên lý mở rộng 
-Zadeh đều có thể là những bài toán khó TODO. Sự khó khăn đến từ việc tính hàm ngược $f^{-1}$
+Zadeh đều có thể là những bài toán khó \cite{Zadeh-extension}.
+Sự khó khăn đến từ việc tính hàm ngược $f^{-1}$
 tại điểm bất kì. Do đó, rất nhiều nhóm nghiên cứu đã đề xuất nhiều cách tiếp cận 
 khác nhau để tìm giá trị xấp xỉ của ảnh của tập mờ khi áp dụng nguyên lý mở rộng của Zadeh.
 
