--- a/report/report.bib
+++ b/report/report.bib
@@ -41,3 +41,11 @@
     journal = {Journal of Applied Mathematics},
     doi = {10.1155/2015/874931}
 }
+
+@article{Kupka,
+    author = {J. Kupka},
+    year = {2016},
+    pages = {26-39},
+    title = {On fuzzifications of discrete dynamical systems},
+    journal = {Fuzzy Sets and Systems}
+}
